# busyboredom-website

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  debug.sh  dockerfile  flake.nix  release.sh
.cargo/: config.toml
src/: captcha.rs  contact.rs  main.rs
src/captcha/: captcha.rs  mod.rs
src/contact/: contact.rs  mod.rs
src/projects/: acceptxmr.rs  mod.rs  quadcopter.rs  this_website.rs
static/: 404.html  base.html  coming_soon.html  contact.html  contact_submitted.html  controls_eng_resume.html  resume.html  software_eng_resume.html  welcome.html
static/projects/: quadcopter.html  this_website.html
static/projects/acceptxmr/: acceptxmr.css  acceptxmr.html  acceptxmr.js
static/projects/amplifier_optimizer/: amplifier_optimizer.html
static/projects/archviz/: GUID.txt  archviz.html
static/projects/archviz/TemplateData/: style.css
static/projects/industrial_automation/: industrial_automation.html
static/projects/mnist_tutorial/: mnist_tutorial.html
static/projects/quadcopter/: quadcopter.html
static/projects/thirty_papers/: thirty_papers.html  thirty_papers.js
static/projects/thirty_papers/papers/: Computing Machinery and Intelligence.md
static/projects/this_website/: this_website.html
wasm/: Cargo.toml
wasm/pkg/: .gitignore  frontend.js  frontend_bg.wasm
wasm/src/: contact.rs  lib.rs
wasm/src/contact/: contact.rs  mod.rs
wasm/src/projects/: acceptxmr.rs  amplifier_optimizer.rs  archviz.rs  industrial_automation.rs  mnist_tutorial.rs  mod.rs  quadcopter.rs  thirty_papers.rs  this_website.rs
