[package]
name = "busyboredom"
version = "0.1.0"
authors = ["Charlie Wilkin <cwilkin@protonmail.com>"]
edition = "2018"

[dependencies]
acceptxmr = { path = "../acceptxmr", features = ["serde"] }
actix = "0.13"
actix-session = {version = "0.6", features = ["cookie-session"] }
actix-web = "4"
actix-web-actors = "4"
bytestring = "1"
cached = "0.34"
captcha = "0.0.8"
cookie = "0.16"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
lru = "0.7"
mime_guess = "2"
rand = "0.8"
rust-embed = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"

[dependencies.lettre]
version = "0.10.0-rc.4"
default-features = false
features = ["smtp-transport", "builder", "rustls-tls"]

[build-dependencies]
base64 = "0.13"
blake3 = "1"
regex = "1"
sha-1 = "0.10"
walkdir = "2"

[profile.release]
lto = true