[package]
name = "busyboredom"
version = "0.1.0"
authors = ["Charlie Wilkin <cwilkin@protonmail.com>"]
edition = "2018"

[dependencies]
acceptxmr = { version = "0.13", features = ["serde", "sqlite"] }
actix = "0.13"
actix-session = {version = "0.8", features = ["cookie-session"] }
actix-web = "4"
actix-web-actors = "4"
bytestring = "1"
cached = "0.46"
captcha = "0.0.9"
cookie = "0.17"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
lru = "0.11"
mime_guess = "2"
rand = "0.8"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"

[dependencies.lettre]
version = "0.10.1"
default-features = false
features = ["smtp-transport", "builder", "rustls-tls"]

[build-dependencies]
base64 = "0.21"
blake3 = "1"
regex = "1"
walkdir = "2"

[profile.release]
lto = true
