[package]
name = "frontend"
version = "0.1.0"
authors = ["Charlie Wilkin <cwilkin@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0"
features = [
  'Document',
  'Element',
  'Location',
  'HtmlElement',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'Response',
]

[profile.release]
lto = true
opt-level = 's'
