[package]
name = "frontend"
version = "0.1.0"
authors = ["Charlie Wilkin <cwilkin@protonmail.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
js-sys = "0.3"
wasm-bindgen = {version = "0.2", default-features = true }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'Clipboard',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Location',
  'History',
  'EventTarget',
  'HtmlElement',
  'HtmlHeadElement',
  'HtmlCollection',
  'HtmlInputElement',
  'Navigator',
  'Node',
  'Window',
  'Headers',
  'Request',
  'RequestInit',
  'Response',
]

[profile.release]
lto = true
opt-level = 's'